--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -4,7 +4,7 @@ nav {
     top: 0;
     z-index: 50;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: column;
     height: 100vh;
 }
@@ -20,7 +20,7 @@ nav .navbar-header {
 nav .navbar-options {
     height: 100%;
     background: var(--dark-secondary);
-    justify-content: space-around;
+    justify-content: space-between;
     display: flex;
     transition: height 0.7s ease-in-out;
 }
