Se centra el div de informacion de contacto

--- a/src/app/home/pages/contact-me/contact-me.component.html
+++ b/src/app/home/pages/contact-me/contact-me.component.html
@@ -12,7 +12,7 @@
                     <fa-icon [icon]="faGithub"></fa-icon>
                 </button>
             </div>
-            <div class="div-right-vertical" [ngClass]="{'lights-on':lightsOn}"></div>
+            <div class="div-right" [ngClass]="{'lights-on':lightsOn}"></div>
             <app-header-section [title]="title" *ngIf="title"></app-header-section>
             <div class="row">
                 <div class="col-md-6 offset-md-1">
