--- a/src/app/home/pages/contact-me/contact-me.component.css
+++ b/src/app/home/pages/contact-me/contact-me.component.css
@@ -1,4 +1,4 @@
-.div-right-vertical {
+.div-right {
     width: 20%;
     height: 100%;
     background-color: var(--color-secondary);
@@ -10,7 +10,7 @@
     filter: saturate(0.2);
 }
 
-.div-right-vertical.lights-on {
+.div-right.lights-on {
     filter: saturate(0.7);
 }
 
@@ -31,6 +31,7 @@
     color: var(--dark-primary);
     transition: 1s;
     filter: saturate(0.2);
+    margin-top: -75px;
 }
 
 .div-info.lights-on {
