--- a/src/app/home/pages/contact-me/contact-me.component.html
+++ b/src/app/home/pages/contact-me/contact-me.component.html
@@ -73,19 +73,19 @@
                             <fa-icon [icon]="faLightBulbOn" size="2x" class="bulb-on" *ngIf="lightsOn"></fa-icon>
                         </div>
                         <h5>Info</h5>
-                        <div class="p-3">
+                        <div class="p-3 ml-3">
                             <fa-icon [icon]="faMapMarkerAlt"></fa-icon>
                             Venezuela
                         </div>
-                        <div class="p-3">
+                        <div class="p-3 ml-3">
                             <fa-icon [icon]="faEnvelope"></fa-icon>
                             marianavl96@gmail.com
                         </div>
-                        <div class="p-3">
+                        <div class="p-3 ml-3">
                             <fa-icon [icon]="faMobileAlt"></fa-icon>
                             +58 04120183625
                         </div>
-                        <div class="p-3">
+                        <div class="p-3 ml-3">
                             <fa-icon [icon]="faWhatsapp"></fa-icon>
                             +58 04241686324
                         </div>
