se deshace el cambio de la tarjeta de informacion

--- a/src/app/home/pages/contact-me/contact-me.component.css
+++ b/src/app/home/pages/contact-me/contact-me.component.css
@@ -37,8 +37,8 @@
     transition: 1s;
     filter: saturate(0.2);
     margin-top: -75px;
-    left: 30px;
-    position: absolute;
+    /* left: 30px;
+    position: absolute; */
 }
 
 .div-info.lights-on {
